--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-aasas
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <tittle>meu site</tittle>
+    </head>
+  <body>
+    <img src ="https://pbs.twimg.com/profile_images/3528962000/7a6c29f3759c18297e7014c61b541f91_400x400.jpeg"/>
+  </body>
+  
+  
+  
+</html>
