--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <tittle>meu site</tittle>
+    <title>meu site</title>
     </head>
   <body>
     <img src ="https://pbs.twimg.com/profile_images/3528962000/7a6c29f3759c18297e7014c61b541f91_400x400.jpeg"/>
