--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>meu site</title>
+    <title></title>
     </head>
-  <body>
-    <h1 style ="color:red; text-align:center"> OI, GALERA!</h1>
-    <img src ="https://pbs.twimg.com/profile_images/3528962000/7a6c29f3759c18297e7014c61b541f91_400x400.jpeg"/>
+  <body background ="http://i0.wp.com/2.bp.blogspot.com/-xRmrEEb366o/TZ22PqDQGlI/AAAAAAAAB84/OVzutL77qHk/s1600/F%25C3%25A1bio%2BSacal.jpg">
+    <h1 style ="color:red; text-align:center"> Show de Sacal no IFPB - Campus Guarabira</h1>
   </body>
   
   
