--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title></title>
+    <title>Show</title>
     </head>
   <body background ="http://i0.wp.com/2.bp.blogspot.com/-xRmrEEb366o/TZ22PqDQGlI/AAAAAAAAB84/OVzutL77qHk/s1600/F%25C3%25A1bio%2BSacal.jpg">
-    <h1 style ="color:red; text-align:center"> Show de Sacal no IFPB - Campus Guarabira</h1>
+    <h1 style ="color:red; text-align:center; margin: 50px 50px 50px 50px"> Show de Sacal no IFPB - Campus Guarabira</h1>
   </body>
   
   
