--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body background ="http://i0.wp.com/2.bp.blogspot.com/-xRmrEEb366o/TZ22PqDQGlI/AAAAAAAAB84/OVzutL77qHk/s1600/F%25C3%25A1bio%2BSacal.jpg">
     <h1 style ="color:#006400; text-align:center"> Show de Sacal no <p>IFPB - Campus Guarabira</p></h1>
     <div id ="one"> <a href= "https://www.youtube.com/watch?v=6IFZd7CD1sM"> Participar</div></a> <div id ="two"> Pressione enter </div>
+    <audio autoplay="autoplay">
+    <source src="audio1.mp3" type="audio/mp3" />
+    </audio>
   </body>
   
   
